informacion de carga y velocidad

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">SimuladorTracker</string>
+    <string name="app_name">Tracker</string>
     <string name="usuarios_enlazados">Usuarios enlazados</string>
 </resources>
